packages/optimism.io/src/hero-section/Hero.module.css
.hero {
	background: white;
	justify-content: center;
	height: 700px
}

.hero .bg {
	background-image: url("./hero.svg");
	background-position: right bottom;
	background-repeat: no-repeat;
	height: 500px;
	max-width: 100%;
	margin-top: -400px;
	overflow: hidden;
}

.hero h1 {
	font-family: "Roboto";
	font-size: 72px;
	font-weight: bold;
	letter-spacing: -0.8px;
	color: black;
	margin-top: 80px;
	margin-bottom: 20px;
}

.hero p {
	font-family: "Roboto Mono";
	font-size: 17px;
	line-height: 30px;
	max-width: 500px;
	margin-left: auto;
	margin-right: auto;
}

.hero h2 {
	font-family: "Roboto";
	font-size: 14px;
	text-transform: uppercase;
}

.welcomeMessage {
	text-align: center;
	max-width: 800px;
	margin-left: auto;
	margin-right: auto;
}

.transitionMessage {
	display: inline-block;
	margin-top: 100px;
	margin-left: auto;
	margin-right: auto;
}

.roundButton {
	height: 80px;
	width: 80px;
    line-height: 80px;
    border-radius: 50%;
    color: white;
    text-align: center;
    text-decoration: none;
	background: #272934;
	font-size: 20px;
	font-weight: 900;
	margin-left: auto;
	margin-right: auto;
}

.roundButtonLink {
	color: white;
	text-decoration: none;
}

.roundButton:hover {
    background: #F01A37;
    color: white;
}

.roundButton:visited {
	color: white;
	text-decoration: none;
}

.roundButtom a:link{
	font-family: "Roboto";
	text-decoration: none;
	color: white;
}

